Fixing breaking styling when using visible-desktop on tables. Refs #494.

--- a/timepiece/static/timepiece/less/style.less
+++ b/timepiece/static/timepiece/less/style.less
@@ -132,7 +132,11 @@ body {
         @blue: #BBBFDD;
         @lightblue: #DFDFEF;
         @lightgray: #AAAAAA;
-
+        .desktop {
+            @media (max-width: 767px){
+                .hide;
+            }
+        }
         tr {
 
             td {
